2012-11-29  Sam Steingold  <sds@gnu.org>

	* modules/oracle/oracle.lisp: code clean-up for better performance
	and error reporting
	(db-error, nl, out, out-nl): remove
	(check-seq-type): add
	(fetch-all): use it
	(update-row, comma-list-of-keys, join): use WITH-OUTPUT-TO-STRING
	instead of CAT so that the algorithm is linear instead of quadratic
	(check-pairs): use ETYPECASE
	(to-string): use PRINC-TO-STRING instead of FORMAT

2012-09-14  Vladimir Tzankov  <vtzankov@gmail.com>

	implement RFE#3545986
	* threads.lisp (*DEFAULT-SPECIAL-BINDINGS*): add abort restart that
	kills current thread - exits with two values: :ABORT and current
	internal real time

2012-08-20  Vladimir Tzankov  <vtzankov@gmail.com>

	* lispbibl.d (per_thread): TLS (i.e. __thread qualifier) is supported
	by gcc 4.5+ on MacOSX and results in significant performance gain

2012-08-03  Vladimir Tzankov  <vtzankov@gmail.com>

	* stream.d (wr_by_array_iau8_buffered): pin the source buffer before
	performing actual write

2012-05-03  Sam Steingold  <sds@gnu.org>

	update berkeley-db to 5.1
	* modules/berkeley-db/bdb.c (add_message): fix
	(DB-VERSION): use db_full_version when available
	(DBE-CREATE): remote is no longer supported by upstream
	(dbt_to_object): also return nil when p_dbt->size==0
	(DB-COMPACT): add
	(DB-VERIFY): mark the db handle invalid because it "may not be accessed
	again after DB->verify() is called, regardless of its return"

2012-04-27  Sam Steingold  <sds@gnu.org>

	Fix bug#3467762: symlink to directory handling
	* modules/syscalls/calls.c (symlink_file): strip trailing "/" from
	new_pathstring
	(copy_one_file): use PROBE-PATHNAME instead of PROBE-FILE to
	accommodate directories
	* pathname.d (delete_directory): when rmdir() fails with ENOTDIR,
	call unlink() because we are dealing with a symbolic link

2012-04-23  Sam Steingold  <sds@gnu.org>

	* format.lisp (format-apply): do not bind *FORMAT-CS* here ...
	(formatter): ... do it here instead for run-time error reporting